BE: update Pill object in system (delete field active_substance, usage_instructions, side_effects, contraindications)
